# streamlit-portfolio

./: .dockerignore  .env.example  .gitignore  .s3cfg  Dockerfile  Grainger_Cover_Letter.docx  Home.py  Pipfile  README.md  SCORECARD.md  app.py  config.py  docker-compose.yml  example.json  flask_app.py  nearestneighbor.py  pod.yaml  pyproject.toml  requirements  requirements.txt  scaler.pkl  wnba_success.pkl  wsgi.py
.streamlit/: config.toml
app/: __init__.py  config.py
application/: __init__.py  assets.py  flask_app.py  routes.py
bibclean/: canonicalize.py  cli.py  config.py  merge.py  models.py
docs/: PORTFOLIO.md
fixtures/: scopus_sample.csv  wos_sample.txt
img_model/: keras_metadata.pb  saved_model.pb
layout/: header.py
lib/: clf.py  cloud_functions.py  st_utils.py  utils.py
pages/: 0_home.py  10_bibliometrix_reference_cleaner.py  1_landscape.py  1_landscape_img.py  1_scenery_category.py  1_update_team_info.py  2_wnba_success.py  3_interests.py  4_game_of_life.py  5_cover_letter.py  5_ellipses.py  6_ellipses.py  6_happy_prime.py  7_analytics.py  7_happy_prime.py  8_analytics.py  8_bibliometrix_reference_cleaner.py  9_experience.py  9_telemetry_admin.py
projects/: GameofLife.py  README.md  __init__.py  job-prep.py
scripts/: bibclean_demo.py
shared/: __init__.py  cloud_functions.py  settings.py  utils.py
static/: adam_css.css  clean-blog.min.css  font-awesome.min.css  gmx.css  gmx_fonts.css  moz-8a6f46cd.min.css  personal.css  personal.v1.css
templates/: about.html  index.html  post.html  test.html
tests/: test_mode_a_scopus.py  (+2 more)
(+163 files in other folders)
