[tool.poetry]
name = "portfolio-website"
version = "0.1.0"
description = ""
authors = ["Adam Klaus <atklaus@wisc.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = { version = "2.15.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow-metal = { version = "^1.1.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
keras = "^2.15.0"
streamlit = "^1.54.0"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.2"
numpy = "^1.26.2"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
datetime = "^5.4"
plotly = "^5.18.0"
opencv-python = "^4.8.1.78"
streamlit-option-menu = "^0.3.6"
extra-streamlit-components = "^0.1.60"
python-dotenv = "^1.0.0"
boto3 = "^1.34.6"
html5lib = "^1.1"
lxml = "^4.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
